@@ -3,6 +3,7 @@ Version 1.7.0+svn:
    * Updated translations:
  * Miscellaneous and bugfixes:
    * Add strict compilation to cmake
+   * Let cmake also use the CXXFLAGS and CFLAGS environment variables
 
 Version 1.7.0:
  * AI:
